Added Last 7 plays daemon

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -17,7 +17,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-#diceTable {
+#diceTable, #recentBetsTable {
     color: white;
     width: 90%;
     margin: auto;
